--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <img src="./images/img_01.png" alt="img_01">
-    <img src="./images/img_02.png" alt="img_02">
+    <img class="img_02" src="./images/img_00.png" alt="img_00">
     <ul>
       <li>
         <img src="./images/img_03_01.png" alt="img_03_01">
